--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -11,8 +11,8 @@
     "description": "Création de la page d'accueil d'une agence de voyage avec HTML & CSS.",
     "details": "Pour le projet Booki, j'ai intégré l'interface d'un site permettant aux utilisateurs de trouver des hébergements et des activités dans la ville de leur choix. En étroite collaboration avec Sarah, la CTO, et Loïc, l'UI designer, j'ai transformé les maquettes desktop, tablette et mobile en code HTML et CSS fonctionnel. Le projet comprenait l'utilisation d'une base de code initiale, le respect des spécifications techniques, et le versionnement via Git. Mon travail a permis de créer une interface utilisateur responsive et intuitive, alignée avec les designs fournis par l'équipe.",
     "technologies": ["HTML", "CSS"],
-    "githubLink": "https://github.com/user/projet1",
-    "demoLink": "https://demo.com/projet1"
+    "githubLink": "https://github.com/juanmanoel237/openclassrooms_projet_2_booki",
+    "demoLink": "https://juanmanoel237.github.io/openclassrooms_projet_2_booki/"
   },
     {
       "id": 2,
@@ -26,7 +26,7 @@
       "description": "Portfolio dynamique d'une architecte.",
       "details": "Pour ArchiWebos, j'ai renforcé l'équipe en tant que développeur front-end sur le projet du site portfolio d'une architecte d'intérieur. J'ai intégré la page de présentation des travaux existante en utilisant les données dynamiques fournies par le backend, développé la page de connexion administrateur à partir de zéro, et créé une modale d'upload de médias. En suivant les designs Figma et en collaborant étroitement avec l'équipe, j'ai contribué à rendre le site fonctionnel, répondant ainsi aux besoins spécifiques du projet et aux attentes de nôtre cliente.",
       "technologies": ["HTML", "CSS", "JavaScript"],
-      "githubLink": "https://github.com/user/projet2",
+      "githubLink": "https://github.com/juanmanoel237/openclassrooms_projet_3_sophie_bluel",
       "demoLink": "https://demo.com/projet2"
     },
     {
@@ -41,8 +41,8 @@
       "description": "Optimisation du site web d'une photographe.",
       "details": "Pour mon service de développement web freelance, j'ai proposé mes compétences en optimisation SEO à Nina Carducci, une photographe. Après avoir réalisé un audit de son site, j'ai identifié des opportunités pour améliorer ses performances de chargement et son référencement sur les moteurs de recherche. J'ai proposé de réduire la taille des images et d'optimiser le code pour améliorer la vitesse et l'accessibilité du site. En utilisant des audits Lighthouse pour les performances et des audits Wave pour l'accessibilité.",
       "technologies": ["LightHouse", "Wave", "Google Snippets"],
-      "githubLink": "https://github.com/user/projet2",
-      "demoLink": "https://demo.com/projet2"
+      "githubLink": "https://github.com/juanmanoel237/openclassrooms_projet_4_nina_carducci",
+      "demoLink": "https://juanmanoel237.github.io/openclassrooms_projet_4_nina_carducci/"
     },
     {
       "id": 4,
@@ -56,8 +56,8 @@
       "description": "Création d'une application web de location immobilière avec React.",
       "details": "Pour le projet de refonte du site Kasa, j'ai initié le développement de l'application React en suivant les maquettes Figma fournies par Paul, le designer. En attendant le backend, j'ai utilisé un fichier JSON avec les dernières annonces de logements comme source de données. J'ai implémenté les composants React, configuré les routes avec React Router, et intégré des fonctionnalités telles qu'une galerie d'images avec un défilement circulaire et des Collapse interactifs.",
       "technologies": ["React", "Sass"],
-      "githubLink": "https://github.com/user/projet2",
-      "demoLink": "https://demo.com/projet2"
+      "githubLink": "https://github.com/juanmanoel237/openclassrooms_projet_5_kasa",
+      "demoLink": "https://kasa-juan-ndegue.netlify.app/"
     },
     {
       "id": 5,
@@ -69,9 +69,9 @@
         "/images/grimoire3.png"
       ],
       "description": "Développer le back-end d'un site de notation de livres.",
-      "details": "Description détaillée du projet 2. Voici une description plus approfondie avec des informations supplémentaires sur le projet.",
+      "details": "Dans ce projet, j'ai créé un serveur avec Express et l'ai connecté à une base de données MongoDB. J'ai mis en place la structure du serveur et géré la communication entre le serveur et la base de données. J'ai développé les modèles de données et implémenté des opérations CRUD (Créer, Lire, Mettre à jour, Supprimer) pour la gestion des livres et des notations, en veillant particulièrement à la sécurité des données et à leur stockage sécurisé. J'ai également implémenté un système d'authentification sécurisé pour les utilisateurs du site. Le projet comprend la gestion du téléchargement et de l'optimisation des images, ainsi que l'ajout de fonctionnalités pour noter les livres et calculer la note moyenne. J'ai respecté les bonnes pratiques du Green Code pour réduire l'empreinte écologique du site. Pour compléter le projet, j'ai utilisé Mongoose pour modéliser les données MongoDB et suivi une architecture MVC (Modèle-Vue-Contrôleur) pour structurer l'application.",
       "technologies": ["Node-js", "MongoDB", "Express"],
-      "githubLink": "https://github.com/user/projet2",
+      "githubLink": "https://github.com/juanmanoel237/openclassrooms_projet_6_mon_vieux_grimoire",
       "demoLink": "https://demo.com/projet2"
     }
     
